--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 .card{
-    background: linear-gradient(45deg, #662D8C, #ED1E79);
+    background: linear-gradient(45deg,#2193b0, #6dd5ed);
     width: 90%;
     max-width: 470px;
     margin: 100px auto 0;
@@ -54,38 +54,47 @@ body{
 
 }
 
+.weather h1{
+    font-size: 80px;
+    font-weight: 500;
+}
+
+
+
 .weather h2{
     font-size: 45px;
     font-weight: 400;
     margin-top: -10px;
 }
 
-/* .weather-icon{
-    margin-top: 20px;
+.weather-icon{
+    margin-top: 30px;
     width: 170px;
-} */
+}
 
 .details{
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    margin-top: 40px;
+    justify-content: space-between;
+    margin-top: 50px;
     padding: 0 20px;
+    
 }
 
-/* .col{
+.col{
     display: flex;
     align-items: center;
     text-align: left;
-} */
+}
 
 .col img{
     width: 45px;
-    /* margin-right: 10px; */
+    margin-right: 10px;
     
     
 }
 
 .humidity, .wind{
     font-size: 28px;
+    margin-top: -6px;
 }
